<resources>
    <string name="app_name">Breeze</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">CONTACTS</string>
    <string name="groups">GROUPS</string>
    <string name="chats">CHATS</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="welcome_to_breeze">Welcome to Breeze</string>
    <string name="hintPassword">Password…</string>
    <string name="hintEmail_adress">Email adress…</string>
    <string name="btnLogin">LOGIN</string>
    <string name="don_t_have_an_account_join_us">Don\'t have an account? Join us!</string>
    <string name="tvOrLoginWith">Or Login with</string>
    <string name="btnPhone">PHONE</string>
    <string name="btnRegister">REGISTER</string>
    <string name="already_have_an_account">I already have an account</string>
    <string name="dialogPleaseWait">Please wait...</string>
    <string name="dialogTitleCreatingAcc">Creating an account...</string>
    <string name="dialogSigningIn">Signing in</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="your_phone_number">Your Phone Number...</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="friend_requests">Friend Requests</string>

    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>
</resources>