<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/itemProfile"
        android:title="@string/profile">

    </item>

    <item
        android:id="@+id/itemRequests"
        android:title="@string/friend_requests">

    </item>

    <item
        android:id="@+id/itemSettings"
        android:title="@string/settings">

    </item>

    <item
        android:id="@+id/langMenu"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/eng"
                android:title="@string/english"/>
            <item
                android:id="@+id/cro"
                android:title="@string/croatian"/>
        </menu>
    </item>

    <item
        android:id="@+id/itemLogout"
        android:title="@string/logout">

    </item>

</menu>