<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/breezelogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/breezelogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/welcomeToBreeze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_breeze"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/Maroon"
        android:textAlignment="center"
        android:layout_below="@+id/breezelogo"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeToBreeze"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hintEmail_adress"
        android:textColorHint="@color/Maroon"
        android:backgroundTint="@color/Maroon"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/Maroon"
        android:backgroundTint="@color/Maroon"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        />

    <TextView
        android:id="@+id/tvDontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_join_us"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Maroon"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tvOrLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOrLoginWith"
        android:layout_below="@+id/tvDontHaveAcc"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btnPhoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPhone"
        android:layout_below="@+id/tvOrLoginWith"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        />

</RelativeLayout>